src/ui/snapshots/lazydatabricks__ui__tests__detail_tab_80x24.snap
---
source: src/ui/mod.rs
expression: render(&app)
---
"┌─[1]─Status──────────────┐┌─[0]─Runs - Detail ⠋───────────────────────────────┐"
"│◐ dev → adb-1.azuredatabr││Name           [someone] okonomi_gold              │"
"│3 of 3 jobs · 0s ago     ││Job ID         1                                   │"
"└─────────────────────────┘│Creator        someone@example.com                 │"
"┌─[2]─Jobs by activity────┐│Run as         someone@example.com                 │"
"│ 2h ◐ [someone] okonomi_…││Format         MULTI_TASK                          │"
"│ 1d ✗ nightly_bronze_ing…││Max concurrent 4                                   │"
"│    · weekly_report      ││Timeout        2h00m                               │"
"│                         ││Tags           dev=someone domain=okonomi          │"
"│                         ││Schedule       -                                   │"
"│                         ││Deployment     -                                   │"
"│                         ││Edit mode      -                                   │"
"│                         ││                                                   │"
"└───────────────────1 of 3┘│⠋ fetching tasks…                                  │"
"┌─[3]─Pipelines ⠋ by activ┐│                                                   │"
"│                         │└───────────────────────────────────────────────────┘"
"│                         │┌─API log───────────────────────────────────────────┐"
"└───────────────────0 of 0┘│GET  /api/2.2/jobs/list?limit=25        200    84ms│"
"┌─[4]─Compute ⠋───────────┐│GET  /api/2.2/jobs/runs/list?job_id=1&… 200   131ms│"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"└───────────────────0 of 0┘└───────────────────────────────────────────────────┘"
" Move: j/k │ Filter: / │ Mine: m │ Status: f │ Actions: x │ Quit: q │ Keys: ?   "
