src/ui/snapshots/lazydatabricks__ui__tests__error_80x24.snap
---
source: src/ui/mod.rs
expression: render(&app)
---
"┌─[1]─Status──────────────┐┌─[0]─Runs - Detail - JSON - Output─────────────────┐"
"│◐ dev → adb-1.azuredatabr││                                                   │"
"│0 of 0 jobs · 0s ago     ││                                                   │"
"│◐ 0 · ✗ 0 · ● 0          ││                                                   │"
"└─────────────────────────┘│                                                   │"
"┌─[2]─Jobs by activity────┐│                                                   │"
"│HTTP 401 for             ││                                                   │"
"│/api/2.2/jobs/list?limit=││                                                   │"
"│25: token rejected. Run  ││                                                   │"
"│`databricks auth login -p││                                                   │"
"│dev`, then press r       ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"└───────────────────0 of 0┘│                                                   │"
"┌─[3]─Pipelines ⠋ by activ┐│                                                   │"
"│                         │└───────────────────────────────────────────────────┘"
"│                         │┌─API log───────────────────────────────────────────┐"
"│                         ││                                                   │"
"└───────────────────0 of 0┘│                                                   │"
"┌─[4]─Compute ⠋───────────┐│                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"└───────────────────0 of 0┘└───────────────────────────────────────────────────┘"
" Move: j/k │ Filter: / │ Mine: m │ Status: f │ Actions: x │ Quit: q │ Keys: ?   "
