src/ui/snapshots/lazydatabricks__ui__tests__failed_only_80x24.snap
---
source: src/ui/mod.rs
expression: render(&app)
---
"┌─[1]─Status──────────────┐┌─[0]─Runs - Detail ⠋───────────────────────────────┐"
"│◐ dev → adb-1.azuredatabr││                                                   │"
"│failed only · 1 of 3 jobs││                                                   │"
"└─────────────────────────┘│                                                   │"
"┌─[2]─Jobs by activity────┐│                                                   │"
"│ 1d ✗ nightly_bronze_ing…││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"└───────────────────1 of 1┘│                                                   │"
"┌─[3]─Pipelines ⠋ by activ┐│                                                   │"
"│                         │└───────────────────────────────────────────────────┘"
"│                         │┌─API log───────────────────────────────────────────┐"
"│                         ││GET  /api/2.2/jobs/list?limit=25        200    84ms│"
"│                         ││GET  /api/2.2/jobs/runs/list?job_id=1&… 200   131ms│"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"└───────────────────0 of 0┘└───────────────────────────────────────────────────┘"
" Showing failed only                                                            "
