src/ui/snapshots/lazydatabricks__ui__tests__full_mode_jobs_focused_80x24.snap
---
source: src/ui/mod.rs
expression: render(&app)
---
"┌─[2]─Jobs─────────────────────────────────────────────────────────────────────┐"
"│[someone] okonomi_gold                                                        │"
"│nightly_bronze_ingest                                                         │"
"│weekly_report                                                                 │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└────────────────────────────────────────────────────────────────────────1 of 3┘"
" Select: j/k │ Open: Enter │ Focus: 0-3/Tab │ Screen: + │ Quit: q         v0.1.0"
